--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
 <meta name="twitter:app:url:googleplay" content="https://t.me/IshanAvasthi">
 
 <meta name="apple-itunes-app" content="app-id=686449807, app-argument: tg://resolve?domain=IshanAvasthi">
-    <link rel="shortcut icon" href="//telegram.org/favicon.ico?3" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://telegram.org/favicon.ico?3" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
     <!--link href="/css/myriad.css" rel="stylesheet"-->
-    <link href="//telegram.org/css/bootstrap.min.css?3" rel="stylesheet">
-    <link href="//telegram.org/css/telegram.css?212" rel="stylesheet" media="screen">
+    <link href="https://telegram.org/css/bootstrap.min.css?3" rel="stylesheet">
+    <link href="https://telegram.org/css/telegram.css?212" rel="stylesheet" media="screen">
   </head>
   <body>
 
     <div class="tgme_page_wrap">
       <div class="tgme_head_wrap">
         <div class="tgme_head">
-          <a href="//telegram.org/" class="tgme_head_brand">
+          <a href="https://telegram.org/" class="tgme_head_brand">
             <i class="tgme_logo"></i>
           </a>
         </div>
       </div>
-      <a class="tgme_head_dl_button" href="//telegram.org/dl?tme=9518e30f5f4425ddb6_13160474033852236801">
+      <a class="tgme_head_dl_button" href="https://telegram.org/dl?tme=9518e30f5f4425ddb6_13160474033852236801">
         Don't have <strong>Telegram</strong> yet? Try it now!<i class="tgme_icon_arrow"></i>
       </a>
       <div class="tgme_page">
