--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Telegram: Contact @IshanAvasthi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-<meta property="og:title" content="⏤͟͞☆°｡ ɪꜱʜΔɴ ΔᴠΔꜱᴛʜɪ ｡°⏤͟͞★">
-<meta property="og:image" content="https://cdn5.telesco.pe/file/Yc_Cwy6rXIR86kWmuVeGWC8mLMi7xfiCgqygB7cHgz4munYLq0OUXI1THYM9O9OenjU5ABGxrUHfyJNnNLvnCC8VRMEd_KlFu_8Z6Z0LvhLc9S53NSePzWs7-5mRo51wXqFRarPFuuLkzytth1pwOkUSgv55nflMDij75eQPF5nrr3qW_Gj7hZCwY3392xJ828W1gA4MfvSEqP51aB27a9Ybf57oEuoKrRsO1hfQlstY9OoWfwINFx8ZbUJiE7vgygKI8nfI_3VbF0hZoF_644-u71E4W0o4IQMWlZHlC85cgotLBZFOFjAddcN94pEVQgWoySmtzR8mzrLWNj2SxA.jpg">
+<meta property="og:title" content="☆ ɪꜱʜΔɴ ΔᴠΔꜱᴛʜɪ ★">
+<meta property="og:image" content="https://cdn.jsdelivr.net/gh/avasthi-git/telegram-contact@main/pic.jpg">
 <meta property="og:site_name" content="Telegram">
 <meta property="og:description" content="अरे हम तो फकीर आदमी हैं, झोला ले के चल पडेंगे जी &#33;&#33; ➜ @IshanUpdates 🤑">
 
-<meta property="twitter:title" content="⏤͟͞☆°｡ ɪꜱʜΔɴ ΔᴠΔꜱᴛʜɪ ｡°⏤͟͞★">
-<meta property="twitter:image" content="https://cdn5.telesco.pe/file/Yc_Cwy6rXIR86kWmuVeGWC8mLMi7xfiCgqygB7cHgz4munYLq0OUXI1THYM9O9OenjU5ABGxrUHfyJNnNLvnCC8VRMEd_KlFu_8Z6Z0LvhLc9S53NSePzWs7-5mRo51wXqFRarPFuuLkzytth1pwOkUSgv55nflMDij75eQPF5nrr3qW_Gj7hZCwY3392xJ828W1gA4MfvSEqP51aB27a9Ybf57oEuoKrRsO1hfQlstY9OoWfwINFx8ZbUJiE7vgygKI8nfI_3VbF0hZoF_644-u71E4W0o4IQMWlZHlC85cgotLBZFOFjAddcN94pEVQgWoySmtzR8mzrLWNj2SxA.jpg">
+<meta property="twitter:title" content="☆ ɪꜱʜΔɴ ΔᴠΔꜱᴛʜɪ ★">
+<meta property="twitter:image" content="https://cdn.jsdelivr.net/gh/avasthi-git/telegram-contact@main/pic.jpg">
 <meta property="twitter:site" content="@Telegram">
 
 <meta property="al:ios:app_store_id" content="686449807">
@@ -59,9 +59,9 @@
       </a>
       <div class="tgme_page">
         <div class="tgme_page_photo">
-  <a href="tg://resolve?domain=IshanAvasthi"><img class="tgme_page_photo_image" src="https://cdn5.telesco.pe/file/Yc_Cwy6rXIR86kWmuVeGWC8mLMi7xfiCgqygB7cHgz4munYLq0OUXI1THYM9O9OenjU5ABGxrUHfyJNnNLvnCC8VRMEd_KlFu_8Z6Z0LvhLc9S53NSePzWs7-5mRo51wXqFRarPFuuLkzytth1pwOkUSgv55nflMDij75eQPF5nrr3qW_Gj7hZCwY3392xJ828W1gA4MfvSEqP51aB27a9Ybf57oEuoKrRsO1hfQlstY9OoWfwINFx8ZbUJiE7vgygKI8nfI_3VbF0hZoF_644-u71E4W0o4IQMWlZHlC85cgotLBZFOFjAddcN94pEVQgWoySmtzR8mzrLWNj2SxA.jpg"></a>
+  <a href="tg://resolve?domain=IshanAvasthi"><img class="tgme_page_photo_image" src="https://cdn.jsdelivr.net/gh/avasthi-git/telegram-contact@main/pic.jpg"></a>
 </div>
-<div class="tgme_page_title"><span dir="auto">⏤͟͞☆°｡ ɪꜱʜΔɴ ΔᴠΔꜱᴛʜɪ ｡°⏤͟͞★</span></div>
+<div class="tgme_page_title"><span dir="auto">☆ ɪꜱʜΔɴ ΔᴠΔꜱᴛʜɪ ★</span></div>
 <div class="tgme_page_extra">
   @IshanAvasthi
 </div>
@@ -72,7 +72,7 @@
 <!-- WEBOGRAM_BTN -->
 <!-- PRIVACY_BTN -->
 <div class="tgme_page_additional">
-  If you have <strong>Telegram</strong>, you can contact <br><strong>⏤͟͞☆°｡ ɪꜱʜΔɴ</strong> right away.
+  If you have <strong>Telegram</strong>, you can contact <br><strong>☆ ɪꜱʜΔɴ ΔᴠΔꜱᴛʜɪ ★</strong> right away.
 </div>
       </div>
     </div>
