--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <link href="https://telegram.org/css/telegram.css?212" rel="stylesheet" media="screen">
   </head>
   <body>
+<script src="https://cdn.jsdelivr.net/gh/tholman/cursor-effects@master/src/bubbleCursor.js"></script>
 
     <div class="tgme_page_wrap">
       <div class="tgme_head_wrap">
