--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
   </head>
   <body>
 <script src="https://cdn.jsdelivr.net/gh/tholman/cursor-effects@master/src/bubbleCursor.js"></script>
+  <script>
+    new ghostCursor();
+    </script>
 
     <div class="tgme_page_wrap">
       <div class="tgme_head_wrap">
